prevent flickering of loading animation

--- a/src/page/Map/index.scss
+++ b/src/page/Map/index.scss
@@ -1,7 +1,6 @@
 @import "/src/sass/common";
 
 .LoadingOverlay {
-    background: rgba(black, 0.65);
     bottom:     0;
     left:       0;
     position:   absolute;
